[package]
name = "smoky"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"

# Simulator library
[lib]
name = "smoky"
path = "sim/sim.rs"

# Graphical editor
[[bin]]
name = "smoky"
path = "gui/main.rs"
